# ChangeLog for media-sound/snd
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/snd/ChangeLog,v 1.7 2003/07/12 20:30:58 aliz Exp $

  21 Jun 2003; jje <jje@gentoo.org> snd-6.7.ebuild, snd-6.ebuild:
  Remove snd-6 and move snd-6.7 to stable.

  14 May 2003; robh <robh@gentoo.org> snd-6.7.ebuild:
  Fixed S, packaing appears to have changed without version change.

*snd-6.7 (09 Apr 2003)

  09 Apr 2003; Martin Holzer <mholzer@gentoo.org> Manifest, snd-6.7.ebuild:
  Now corrected. stable release. Closes #7626.

*snd-6.ebuild (6 Aug 2002)

  6 Aug 2002; Michael Nazaroff <naz@gentoo.org> snd-6.ebuild, ChangeLog:
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.